--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 
 button {
+    display: flex;
     font: inherit;
     padding: 1.5em 3em;
     background: whitesmoke;
@@ -48,7 +49,7 @@ button::before {
     position: absolute;
     z-index: -1;
     background: red;
-    background-color: rgb(207, 44, 126);
+    background-color: rgb(180, 27, 27);
     width: 10%;
     aspect-ratio: 1;
     border-radius: 50%;
@@ -76,10 +77,15 @@ button:has(:last-child:active)::before {
     transition: transform 500ms, opacity 250ms;
 }
 
-p {
+h1 {
+    display: flex;
     text-align: center;
-    font-size: 35px;
+    font-size: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
+    color: whitesmoke;
+    font-weight:lighter;
+    text-shadow: black 5px 0 8px, #FC0 10px 0 10px;
+    margin: 10px;
 }
 
 
